--- a/TODO
+++ b/TODO
@@ -25,3 +25,11 @@
   I followed
 - ResultParser and UnwrappedParser can maybe be fusioned. They're almost the same 
 - Validate Enums when passing params
+- for RDS and RedShift lists: adapt code so that botocore jsons don't have to be changed
+- Find a way to attach extra roles to specific classes so that we can extend the "standard"
+  behaviour of some classes like:
+  - CloudFormation::GetTemplateResult: add a lazy accessor that converts the TemplateBody to a 
+    datastructure so it can be treated as a hashref. adjust 
+    t/10_responses/cloudformation-get-template.xml.test.yml accordingly
+  - Policies in IAM objects 
+- Policies are url encoded texts. They have to be un-url-encoded before exposing to the user
