--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.02 ?
+
+0.01 2 Apr 2015 02:35:00
+ - First version launched to CPAN
+
 2015-02-28
  - The default CredentialProviderChain will now try to read an ini
    file in ~/.aws/credentials with the aws credentials
