--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.05 3 May 2015 23:00:00
+ - Delete files that were leftover from old API generations
+ - Update to DynamoDB: support for expressions
+ - Adapt API generation to new boto layout
+
+0.04
+ - API updates
+
 0.03 10 Apr 2015 22:00:00
  - Service updates
  - Support for new services (like MachineLearning and WorkSpaces)
