--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - EC2 SpotFleet API calls
  - Opsworks support for Windows
  - Update to ElasticBeanstalk API (ResourceName)
+ - UserAgent now report Paws version number
 
 0.07 15 May 2015 19:30:00
  - Generate META.yml
