--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.09 
+ - Difference between SQS message AttributeMaps and QueueAttribute maps (thnks codehead) 
+
 0.08 19 May 2015 22:12:00
  - EC2 SpotFleet API calls
  - Opsworks support for Windows
