--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
    the APIs. The exceptions stringify so you don't have to worry about too much breakage. If you
    were parsing the error message from the exception, you should now use Paws::Exceptions accessors
    to get the already parsed information
+ - Refactoring in the different callers to move functionalities only where needed
 
 0.08 19 May 2015 22:12:00
  - EC2 SpotFleet API calls
