--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
    were parsing the error message from the exception, you should now use Paws::Exceptions accessors
    to get the already parsed information
  - Refactoring in the different callers to move functionalities only where needed
+ - SQS Maps are now working correctly (QueueMaps were ill defined). Thanks to codehead
 
 0.08 19 May 2015 22:12:00
  - EC2 SpotFleet API calls
