--- a/Changes
+++ b/Changes
@@ -10,6 +10,8 @@
    invalid json string exception was thrown
  - longs changed to Moose type Int, instead of Num (longs are 64 bit integers 
    in Java https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html)
+   Those Ints are passed to AWS as int() instead of Strings, because AWS APIs (CloudWatchLogs
+   for example) isn't able to transform String to long (we get an API error)
 
 0.08 19 May 2015 22:12:00
  - EC2 SpotFleet API calls
