--- a/Changes
+++ b/Changes
@@ -14,6 +14,9 @@
    for example) isn't able to transform String to long (we get an API error)
  - Refactored the config attribute of the Paws class. Also documented what you can configure from
    the config, so now the "config" is official.
+ - BugFix: some Map attributes in JSON APIs were incorrectly being created as Maps of Strings, instead of Maps of Objects.
+   Affected APIs are: CloudSearchDomain, CloudWatchLogs, CognitoIdentity, Config, DataPipeline, DynamoDB, EMR, Kinesis
+   MachineLearning, OpsWorks, S3 and StorageGateway.
 
 0.08 19 May 2015 22:12:00
  - EC2 SpotFleet API calls
