--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.10 
+ - Don't dump request in EC2 Caller
+
 0.09 25 Jun 2015 17:00:00
  - API updates from botocore until 2015-06-29
  - Difference between SQS message AttributeMaps and QueueAttribute maps (thnks codehead) 
