--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.13
  - Information for calculating region endpoints is moved into service classes, not the RegionInfo
    class that holds all endpoint information for all services.
+ - Rename RegionalEndpointCaller role to EndpointResolver
 
 0.12 09 Jul 2015
  - New API: CodePipeline
