RDS update: support for Aurora

--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
    - CreateRoute drops the ClientToken param
    - Support for SpotFleetLaunchSpecification
  - CloudWatch Logs API update: Support Destinations
+ - RDS API update: Support for Aurora (new DBCluster calls)
 
 0.13
  - New API: DynamoDB Streams
