Opsworks API update

--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@
    - Support for SpotFleetLaunchSpecification
  - CloudWatch Logs API update: Support Destinations
  - RDS API update: Support for Aurora (new DBCluster calls)
+ - Opsworks API update: support for RHEL7
 
 0.13
  - New API: DynamoDB Streams
