--- a/Changes
+++ b/Changes
@@ -11,6 +11,7 @@
  - RDS API update: Support for Aurora (new DBCluster calls)
  - Opsworks API update: support for RHEL7
  - DeviceFarm API update: support for iOS
+ - SimpleWorkflow API update: support for Lambda
 
 0.13 17 Jul 2015
  - New API: DynamoDB Streams
