--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
  - Config API update: ListDiscoveredResources
  - EC2 API update: Resource oriented bidding for spot instances
  - StorageGateway API update: tagging
+ - S3 API update: event filtering
 
 0.14 06 Aug 2015
  - LWP Caller (Paws::Net::LWPCaller). Paws supports calling behind HTTPS proxies with LWP (dtikhonov)
