--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.15
  - fix unicode issues in test t/10_responses.t (ioanrogers)
+ - fix bug handling responses with ArrayRef of Maps (DynamoDB reported by stevecaldwell77)
  - ElasticBeanstalk API update: support for Instance and Environment health 
  - Codepipeline API update: support for encription key
  - Config API update: ListDiscoveredResources
