--- a/Changes
+++ b/Changes
@@ -11,6 +11,7 @@
  - EC2 API update: Resource oriented bidding for spot instances
  - StorageGateway API update: tagging
  - S3 API update: event filtering
+ - IAM API update: Policy simulation methods
 
 0.14 06 Aug 2015
  - LWP Caller (Paws::Net::LWPCaller). Paws supports calling behind HTTPS proxies with LWP (dtikhonov)
