--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.16
+ - S3 Update: Support for S3 Standard - Infrequent Access 
 
 0.15 16 Sep 2015
  - fix unicode issues in test t/10_responses.t (ioanrogers)
