--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.16
+ - docu fixes by Gimpson
  - S3 Update: Support for S3 Standard - Infrequent Access 
  - CloudWatchLogs Update: Export tasks
 
