--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.18 
  - IAM update: SimulateCustomPolicy updated. Docs updated too
  - Autoscaling update: Encryption for EBS volumes flag. Docu update too
+ - SSM update: new functionalities (SendCommand) for mangaging Windows boxes in AWS
 
 0.17 22 Oct 2015
  - Pass tests on MacOSX by Roger Pettett
