--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
  - SSM update: new functionalities (SendCommand) for mangaging Windows boxes in AWS
  - new API Gateway service
  - STS docu update
+ - DeviceFarm update: New Update and Delete methods
 
 0.17 22 Oct 2015
  - Pass tests on MacOSX by Roger Pettett
