--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
  - new API Gateway service
  - STS docu update
  - DeviceFarm update: New Update and Delete methods
+ - ELB docu update
 
 0.17 22 Oct 2015
  - Pass tests on MacOSX by Roger Pettett
