--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.18 
+ - Important change: Paws license has been changed to a more permissive Apache 2.0
  - IAM update: SimulateCustomPolicy updated. Docs updated too
  - Autoscaling update: Encryption for EBS volumes flag. Docu update too
  - SSM update: new functionalities (SendCommand) for mangaging Windows boxes in AWS
