--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
  - STS docu update
  - DeviceFarm update: New Update and Delete methods
  - ELB docu update
+ - SQS docu update
 
 0.17 22 Oct 2015
  - Pass tests on MacOSX by Roger Pettett
