--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
  - We were having problems checking error messages for dns and connection failures
    Different messages on different platforms / locales were making tests fail, and
    Paws harder to install
+ - Generate JSON API Maps without xml_keys and xml_values. Not needed.
  - add preloading and immutabilizing to documentation
  - SQS docu update
  - ApiGateway support for variables
