--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.20
+ - Better schema validation in builders (by Oriol Soriano) 
+
 0.19 12 Nov 2015
  - Fix issues with POD documentation. Some head2 tags didn't have a newline above
    them, causing them to not behave as head tags
