EC2 docu update

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.20
  - Better schema validation in builders (by Oriol Soriano) 
+ - EC2 docu update
 
 0.19 12 Nov 2015
  - Fix issues with POD documentation. Some head2 tags didn't have a newline above
