--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@
  - Better schema validation in builders (by Oriol Soriano) 
  - EC2 docu update
  - RDS support for cross account snapshot sharing. New instance types too
+ - Inspector API update
+ - DeviceFarm API update
 
 0.19 12 Nov 2015
  - Fix issues with POD documentation. Some head2 tags didn't have a newline above
