--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.20
+0.20 3 Dec 2015
  - S3 can now get and put objects. Entire API should now be working correctly (glenveegee)
  - Better schema validation in builders (by Oriol Soriano) 
  - Paws::Credential::File doesn't throw warnings when users don't have $ENV{HOME} (by A.Gimenez)
