--- a/Changes
+++ b/Changes
@@ -1,10 +1,13 @@
 0.22
  - Fix bug where a StrToObj map of complex objects would not instance the object correctly
+ - New Service: ECR (EC2 Container Registry)
  - EC2 API update: support for NatGateways
  - RDS API update: support for enhanced monitoring, and more new features
  - CloudFront API update: support for compressing
  - CloudTrail API update: support for multiregion trails
  - Config API update
+ - EMR API update: support for VPC EMR
+ - ECS API update: deployment options
 
 0.21 16 Dec 2015
  - Bug fix: calls supposed to not return any object were failing since 0.21 (jare)
