--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 0.22
+ - New: perls 5.10 and 5.12 are working after changing package syntax. They've been setup for
+        travis testing. This should not be thought of as long term commitment to supporting such
+        old perl versions, but at least it can be viewed as we'll know exactly when we stop
+        supporting them (and that will be announced in the changelog)
  - Fix bug where a StrToObj map of complex objects would not instance the object correctly
  - New Service: ECR (EC2 Container Registry)
  - EC2 API update: support for NatGateways
