--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.22
+ - New: Paws::Credential::AssumeRoleWithSAML for using Paws through STS AssumeRoleWithSAML
+        examples/sts-saml has an example of how to retrieve credentials through an ADFS
  - New: perls 5.10 and 5.12 are working after changing package syntax. They've been setup for
         travis testing. This should not be thought of as long term commitment to supporting such
         old perl versions, but at least it can be viewed as we'll know exactly when we stop
