--- a/Changes
+++ b/Changes
@@ -18,6 +18,7 @@
  - Config API update
  - EMR API update: support for VPC EMR
  - ECS API update: deployment options
+ - EC2 docu update
 
 0.21 16 Dec 2015
  - Bug fix: calls supposed to not return any object were failing since 0.21 (jare)
