IoT API update: Topic rules

--- a/Changes
+++ b/Changes
@@ -19,7 +19,7 @@
  - Config API update
  - EMR API update: support for VPC EMR
  - ECS API update: deployment options
- - EC2 docu update
+ - IoT API update: Topic rules 
 
 0.21 16 Dec 2015
  - Bug fix: calls supposed to not return any object were failing since 0.21 (jare)
