--- a/Changes
+++ b/Changes
@@ -24,6 +24,7 @@
  - ECS API update: deployment options
  - IoT API update: Topic rules 
  - CloudFormation API update: ContinueUpdateRollback method
+ - WAF API update
 
 0.21 16 Dec 2015
  - Bug fix: calls supposed to not return any object were failing since 0.21 (jare)
