--- a/Changes
+++ b/Changes
@@ -13,6 +13,7 @@
  - Better documentation: show the valid values for an attribute when it's an enum
  - Fix bug where a call to DescribeAutoScalingGroups would die if the API was not returning the LaunchConfigurationName attribute for the Instance shape (reported by msoriano)
  - Fix bug where a StrToObj map of complex objects would not instance the object correctly
+ - Fix SimpleDB (SDB) API definitions. AWS provided ones were not working
  - New Service: ECR (EC2 Container Registry)
  - New Service: CloudWatch Events
  - New Service: ACM (AWS Certificate Manager)
