--- a/Changes
+++ b/Changes
@@ -17,6 +17,7 @@
  - New Service: ECR (EC2 Container Registry)
  - New Service: CloudWatch Events
  - New Service: ACM (AWS Certificate Manager)
+ - New Service: GameLift
  - EC2 API update: support for NatGateways, VpcClassicLinkDnsSupport, and ScheduledInstances
  - RDS API update: support for enhanced monitoring, and more new features
  - CloudFront API update: support for compressing and SSL to origin
