Lambda API update: Support for VPC

--- a/Changes
+++ b/Changes
@@ -31,6 +31,7 @@
  - MarketplaceCommerceAnalytics API update: support for CustomerDefinedValues
  - WAF API update
  - APIGateway API update: Authorizer methods
+ - Lambda API update: Support for VPC
 
 0.21 16 Dec 2015
  - Bug fix: calls supposed to not return any object were failing since 0.21 (jare)
