--- a/Changes
+++ b/Changes
@@ -16,6 +16,7 @@
  - New Service: ECR (EC2 Container Registry)
  - New Service: CloudWatch Events
  - New Service: ACM (AWS Certificate Manager)
+ - New service: GameLift
  - EC2 API update: support for NatGateways, VpcClassicLinkDnsSupport, and ScheduledInstances
  - RDS API update: support for enhanced monitoring, and more new features
  - CloudFront API update: support for compressing and SSL to origin
@@ -26,6 +27,18 @@
  - IoT API update: Topic rules 
  - CloudFormation API update: ContinueUpdateRollback method
  - WAF API update
+ - Autoscaling API update: lifecycle improvements
+ - CodeDeploy API update: more Batch operations
+ - ApiGateway API update: Authorizers operations
+ - EMR API update: support for EBS volumes
+ - Route53 API update (SNI support) + docu updates
+ - SES API update: support for different encodings
+ - Storagegateway API update: create tapes with barcodes
+ - RDS API update: KMS keys
+ - Lambda update: support for VPC
+ - CloudFormation API update: tagging support + RetainResources on delete
+ - CloudFront ACM cert support
+ - MarketplaceCommerceAnalytics API update
 
 0.21 16 Dec 2015
  - Bug fix: calls supposed to not return any object were failing since 0.21 (jare)
