--- a/Changes
+++ b/Changes
@@ -4,7 +4,8 @@
  - New: perls 5.10 and 5.12 are working after changing package syntax. They've been setup for
         travis testing. This should not be thought of as long term commitment to supporting such
         old perl versions, but at least it can be viewed as we'll know exactly when we stop
-        supporting them (and that will be announced in the changelog)
+        supporting them (and that will be announced in the changelog). Thanks to ilmari for
+        a 5.10 support PR)
  - New: Paws::Net::Caller, LWPCaller  and FurlCaller now implement retry logic in case APIs
         return a retriable HTTP error
  - New: DynamoDB now benefits from crc-32 errors, and being able to retry the call
