--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.24 10 Apr 2016 
+ - t/01-load fails because Class::Unload is not declared for test Issue #95 (eserte)
+ - ApiGateway API update: ImportRestApi and PutRestApi operations
+ - Route53 API Update: Metric Based Health Checks, DNS Failover for Private Hosted Zones, and Configurable Health Check Locations
+ - Lambda API update
+ - Directory Service API update: Simplified Trust Configuration
+ - Elastic Beanstalk API update: deployment options
+ - STS API update: GetCallerIdentity
+
 0.23 04 Apr 2016
  - t/11_client_exceptions was failing if Furl wasn't installed (andk)
    We skip the test if the required recorder doesn't load, as this
