--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.25 
+ - IoT API update: Delete certificates and registrations
+
 0.24 10 Apr 2016 
  - t/01-load fails because Class::Unload is not declared for test Issue #95 (eserte)
  - ApiGateway API update: ImportRestApi and PutRestApi operations
