--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.27
+ - MachineLearning API update: Tagging API
+ - IoT API update: ListPolicyPrincipals
+ - EC2 API update: GetConsoleOutput, DescribeAllSpotFleetRequests 
+
 0.26 29 May 2016
  - New Service: Discovery
  - New Service: ApplicationAutoScaling
