--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
-0.27
+0.27 
+ - RestXml (S3, f.ex) services now complete responses from headers (shardiwal)
  - MachineLearning API update: Tagging API
  - IoT API update: ListPolicyPrincipals
  - EC2 API update: GetConsoleOutput, DescribeAllSpotFleetRequests 
+ - SSM API update: Tagging
 
 0.26 29 May 2016
  - New Service: Discovery
