S3 API update: ListObjectsV2 StartAfter attribute fix

--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
  - SSM API update: Tagging
  - SNS API update: sending SMSs' to international phones
  - SES API update: SetIdentityHeadersInNotificationsEnabled added
+ - S3 API update: ListObjectsV2 StartAfter attribute fix
 
 0.26 29 May 2016
  - New Service: Discovery
